[core] :bug: Styleable: fix UnsupportedOperationException
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>